--- a/tests/integration/test.html
+++ b/tests/integration/test.html
@@ -4,8 +4,7 @@
     <title></title>
     <script src="../../bower_components/jquery/jquery.min.js"></script>
     <script src="../../bower_components/angular/angular.min.js"></script>
-    <!--<script src="../../bower_components/typeahead.js/dist/typeahead.bundle.min.js"></script>-->
-    <script src="../../bower_components/typeaheadjs-int-0.11.0/dist/typeahead.bundle.min.js"></script>
+    <script src="../../bower_components/typeahead.js/dist/typeahead.bundle.min.js"></script>
     <script src="../../src/angular-typeaheadjs.js"></script>
 
     <style>
