--- a/tests/e2e/test.html
+++ b/tests/e2e/test.html
@@ -225,8 +225,8 @@
     function UseCase1Controller($scope) {
         var vm = this;
         vm.ttOptions = {
-            prefetch: '/tests/local/prefetch.json',
-            remote: '/tests/local/%QUERY.json'
+            prefetch: '/tests/assets/prefetch.json',
+            remote: '/tests/assets/%QUERY.json'
         };
         //            vm.options = {
         //            };
@@ -235,8 +235,8 @@
     function UseCase2Controller($scope) {
         var vm = this;
         vm.ttOptions = {
-            prefetch: '/tests/local/prefetch.json',
-            remote: '/tests/local/%QUERY.json'
+            prefetch: '/tests/assets/prefetch.json',
+            remote: '/tests/assets/%QUERY.json'
         };
         vm.options = {
             emitOnlyIfPresent: false
@@ -264,8 +264,8 @@
     function UseCase3Controller($scope) {
         var vm = this;
         vm.ttOptions = {
-            prefetch: '/tests/local/prefetch.json'/*,
-                remote:'/tests/local/%QUERY.json'*/
+            prefetch: '/tests/assets/prefetch.json'/*,
+                remote:'/tests/assets/%QUERY.json'*/
         };
         vm.options = {
             clear: false
@@ -286,8 +286,8 @@
     function UseCase4Controller($scope) {
         var vm = this;
         vm.ttOptions = {
-            prefetch: '/tests/local/prefetch.json',
-            remote: '/tests/local/%QUERY.json'
+            prefetch: '/tests/assets/prefetch.json',
+            remote: '/tests/assets/%QUERY.json'
         };
         vm.options = {
             clear: true,
@@ -309,8 +309,8 @@
     function UseCase5Controller($scope) {
         var vm = this;
         vm.ttOptions = {
-            prefetch: '/tests/local/prefetch.json',
-            remote: '/tests/local/%QUERY.json'
+            prefetch: '/tests/assets/prefetch.json',
+            remote: '/tests/assets/%QUERY.json'
         };
         vm.options = {
             emitOnlyIfPresent: false
@@ -367,8 +367,8 @@
     function UseCase6Controller($scope) {
         var vm = this;
         vm.ttOptions = {
-            prefetch: '/tests/local/prefetch.json',
-            remote: '/tests/local/%QUERY.json'
+            prefetch: '/tests/assets/prefetch.json',
+            remote: '/tests/assets/%QUERY.json'
         };
         vm.options = {
             //emitOnlyIfPresent: true DEFAULT
@@ -394,8 +394,8 @@
     function UseCase7Controller($scope) {
         var vm = this;
         vm.ttOptions = {
-            prefetch: '/tests/local/prefetch.json',
-            remote: '/tests/local/%QUERY.json'
+            prefetch: '/tests/assets/prefetch.json',
+            remote: '/tests/assets/%QUERY.json'
         };
         vm.options = {
             //emitOnlyIfPresent: true DEFAULT
@@ -421,8 +421,8 @@
     function UseCase8Controller($scope) {
         var vm = this;
         vm.ttOptions = {
-            prefetch: '/tests/local/prefetch.json',
-            remote: '/tests/local/%QUERY.json'
+            prefetch: '/tests/assets/prefetch.json',
+            remote: '/tests/assets/%QUERY.json'
         };
         vm.options = {
             clear: true,
