--- a/index.html
+++ b/index.html
@@ -34,54 +34,49 @@
     <h4>This page is an adaptation of <a href="http://twitter.github.io/typeahead.js/examples/">typeaheadjs examples page</a> using AngularJS
         <br/>
         to demonstrate the use of that component in an angular application using the <br/>
-        <span class="mydir"><a href="https://github.com/borntorun/angular-typeaheadjs">angular-typeaheadjs</a></span> directive.
+        <span class="xmydir"><a href="https://github.com/borntorun/angular-typeaheadjs">angular-typeaheadjs</a></span> directive.
     </h4>
 
     <aside>
         <h5>This is a an independent project and not related to the twitter typeahead.js project.</h5>
-        <p>The directive uses always the <a href="https://github.com/twitter/typeahead.js/blob/master/doc/bloodhound.md">Bloodhound</a> (Suggestion Engine).</p>
+        For more information and exemples see the project on <a href="https://github.com/borntorun/angular-typeaheadjs">github</a>
     </aside>
 
-    <ol class="table-of-contents">
+    <!--<ol class="table-of-contents">
         <li><a href="#remoteprefetch">Remote-Prefetch</a></li><span> &middot; </span>
-    </ol>
+    </ol>-->
 
     <div class="example" id="remoteprefetch">
         <h2 class="example-name">Remote - Prefetch</h2>
         <p class="example-description">
-            Prefetched data is fetched and processed on initialization. If the
-            browser supports local storage, the processed data will be cached
-            there to prevent additional network requests on subsequent page loads.
+            In this example the directive will create a Bloodhound engine for suggestions from prefetch and remote urls, with options passed in. (see the code)
         </p>
         <p>
-            Try to type first the letter <b>'u'</b> , you will see 9 items <small>(the limit specified)</small> from prefetch data.<br/>
-            The if you type a <b>'t'</b> you will see the remote in action getting another item
+            Try to type first the letter <b>'u'</b> , you will see 5 (the limit specifies) items from prefetch data<br/>
+            Then if you type a <b>'n'</b> you will see 3 items + 1 (last is from remote data)<br/>
+            Clear the input.<br/>
+            And type first the letter <b>'ut'</b> , you will see 2 items from remote data<br/>
 
         </p>
 
         <div class="demo" ng-controller="RemotePrefetchCtrl as vm">
-
-            <!--<input class="typeahead" type="text" placeholder="Countries">-->
             <div class="scrolling">Item scrolled:&nbsp;{{vm.itemonCursorChanged}}</div>
             <div class="selection">Selection:&nbsp;<span ng-repeat="item in vm.itemonSelected">{{item}}</span></div>
 
-            <angular-typeaheadjs prefetch="{{vm.prefetch}}"
-                                 remote="{{vm.remote}}"
-                                 onselected="vm.onSelected"
-                                 onclosed="vm.onClosed"
-                                 oncursorchanged="vm.onCursorChanged"
-                                 datasource="countries"
-                                 clearvalue="true"
-                                 placeholder="Search for Countries"
-                                 minlensugestion="1"
-                                 limit="9"
-                                 cssinput="inputclass"/>
+                <angular-typeaheadjs angty-ttoptions="{{vm.ttoptions}}"
+                                     angty-options="{{vm.options}}"
+                                     angty-onselect="vm.onSelected"
+                                     angty-onclose="vm.onClosed"
+                                     angty-oncursorchange>
 
+                    <input class="typeahead" type="text" placeholder="Search for Countries"/>
+
+                </angular-typeaheadjs>
 
         </div>
 
         <div class="gist" ng-non-bindable>
-            <script src="https://gist.github.com/borntorun/7671ef832b7cbacb8255.js"></script>
+            <script src="https://gist.github.com/borntorun/04eddcf5edd0abdb50d9.js"></script>
         </div>
     </div>
 
@@ -103,13 +98,12 @@
 
 
 
-
-
 <!--<script src="bower_components/handlebars/handlebars.min.js"></script>-->
 <script src="bower_components/jquery/dist/jquery.min.js"></script>
 <script src="bower_components/typeahead.js/dist/typeahead.bundle.min.js"></script>
 <script src="bower_components/angular/angular.min.js"></script>
 <script src="bower_components/angular-typeaheadjs/dist/angular-typeaheadjs.min.js"></script>
+
 <script src="js/app.js"></script>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 <a href="https://github.com/borntorun/angular-typeaheadjs"><img style="position: fixed; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/e7bbb0521b397edbd5fe43e7f760759336b5e05f/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f677265656e5f3030373230302e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_green_007200.png"></a>
